2004-05-07  Choe Hwanjin <krisna@kldp.org>
	* start ChangeLog for hanja dictionary file